# phantom-project

./: AI learning module  Automated attack system  EXPLOIT_DATABASE  Makefile  Makefile.bak  Makefile.old  Makefile.old.backup  MetasploitMCP.py  Project II (2)  Notes  README.md  Wireless Attack Module  ai_learning_module.py  app.ini  app.py  app.py.backup  app.py.backup-20251116-172646  automated_attack_system.py  bash  complete c2 integration II  (2)  config.py  conftest.py  database.py  filelist.txt  install_phantom.sh  installer  list-targets  master Makefile   metasploit server code  metasploit_ai_knowledge.json  metasploit_ai_knowledge.json.backup  metasploitmcp  msf_adapter.py  msf_rpc_client.py  probe_helper.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  routes.py  run_meta_mpc_tests.sh  (+6 more)
.cursor/: mcp.json
backups/: Makefile.backup  app.py.backup  app.py.backup-original
config/systemd/: metasploitmcp-app.service
data/: campaigns.db
data/campaigns/: campaigns.db
scripts/: fix_phantom_project.sh  install_phantom.sh  list-targets  reorganize_project.sh  reporting_module.py  run_tests.py  scan_network.py  setup.sh  setup_venv.sh  start.sh  start_phantom.sh
src/phantom/: ai_learning_module.py  app.py  automated_attack_system.py  config.py  database.py  probe_helper.py  routes.py  scapy_probe_socket.py
src/phantom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/phantom/metasploit/: EXPLOIT_DATABASE  MetasploitMCP.py  metasploit_ai.py  metasploit_mcp.py
src/phantom/msf/: adapter.py  rpc_client.py
systemd/: metasploitmcp-scapy.service
templates/: dashboard.html
tests/: __init__.py  test_config_database.py  test_helpers.py  test_options_parsing.py  test_safe_modules.py  test_tools_integration.py
