[project]
name = "phantom"
version = "0.1.0"
description = "Phantom pentesting project"
requires-python = ">=3.10"

[project.scripts]
phantom = "app:create_app"
metasploit-mcp = "phantom.metasploit.metasploit_mcp:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = []





